# beaconcha-tools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
apps/desktop/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/desktop/public/: splashscreen.html
apps/desktop/scripts/: prepare-daemon-binary.mjs  tauri-dev-clean.sh
apps/desktop/src/: App.tsx  main.tsx  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: AccessGate.tsx  AppCrashBoundary.tsx  DiagnosticsPanel.tsx  ErrorSheet.tsx  HelpCenter.tsx  LaunchScreen.test.tsx  LaunchScreen.tsx  Skeleton.tsx  StatusPill.tsx  ValidatorTable.tsx
apps/desktop/src/hooks/: useDashboardData.ts  useLaunchChecks.ts  useTheme.ts
apps/desktop/src/lib/: api.ts  auth.ts  eligibility.ts  logger.ts  query.ts  tauri.ts
apps/desktop/src/pages/: DashboardPage.tsx  DutiesPage.tsx  HealthPage.tsx  IncidentsPage.tsx  KeyManagementPage.tsx  OperationsPage.tsx  RewardsPage.tsx  SettingsPage.tsx
apps/desktop/src/styles/: app.css  theme.css
config/: beaconops.example.toml
crates/beaconops-core/: Cargo.toml
crates/beaconops-core/src/: alerts.rs  cache.rs  config.rs  error.rs  keymanager.rs  lib.rs  models.rs  monitor.rs  rpc.rs  storage.rs
crates/beaconops-core/tests/: config_tests.rs  rpc_failover_tests.rs  storage_migration_tests.rs  storage_tests.rs
crates/beaconops-daemon/: Cargo.toml
crates/beaconops-daemon/src/: main.rs
docs/: api-contracts.md  architecture.md  failure-scenarios.md  faq.md  incident-playbooks.md  modules.md  operator-guide.md  quality-matrix.md  quick-start.md  release-checklists.md  runbooks.md  user-guide.md
scripts/: live-diagnostics.sh
scripts/quality/: chaos.sh  frontend.sh  perf.sh  smoke.sh
