[workspace]
members = [
  "crates/beaconops-core",
  "crates/beaconops-daemon",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Beaconcha Tools Team"]

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "hickory-dns"] }
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
toml = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "chrono"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
url = "2.5"
once_cell = "1.21"
futures = "0.3"
blst = "0.3"
hex = "0.4"
rand = "0.9"
sha2 = "0.10"
