[package]
name = "beaconops-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
dashmap.workspace = true
futures.workspace = true
blst.workspace = true
hex.workspace = true
rand.workspace = true
sha2.workspace = true
once_cell.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
toml.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
serde_json.workspace = true
tokio.workspace = true
